# djangocms-rest

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: codeql.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_rest/: __init__.py  permissions.py  urls.py  utils.py  views.py  views_base.py
djangocms_rest/serializers/: aliasserializer.py  language_serializers.py  pages.py  pageserializer.py  placeholder.py  placeholders.py  site.py  utils.py
djangocms_rest/serializers/utils/: cache.py  render.py
tests/: settings.py  test_migrations.py  test_rendering.py  urls.py
tests/requirements/: base.txt
tests/test_app/: cms_plugins.py  forms.py  models.py
